@@ -1,7 +1,7 @@
 /* Extended Module Player
  * Copyright (C) 1996-2007 Claudio Matsuoka and Hipolito Carraro Jr
  *
- * $Id: xmpi.h,v 1.22 2007-10-16 19:51:05 cmatsuoka Exp $
+ * $Id: xmpi.h,v 1.23 2007-10-18 02:06:15 cmatsuoka Exp $
  *
  * This file is part of the Extended Module Player and is distributed
  * under the terms of the GNU General Public License. See doc/COPYING
@@ -124,15 +124,6 @@ struct xmp_ord_info {
 /* Context */
 
 #include "xxm.h"
-
-struct xmp_driver_context {
-    int numvoc;				/* number of soundcard voices */
-    int numchn;				/* number of channels (mod + extra) */
-    int numtrk;				/* number of tracks in module */
-    int maxvoc;				/* */
-    int agevoc;				/* */
-    int extern_drv;			/* driver doesn't use mixer */
-};
 
 struct xmp_mod_context {
     char name[XMP_DEF_NAMESIZE];	/* module name */
